# tglow-core

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cellprofiler/DRUG_PERTURB/: 2d_v3.cppipe
cellprofiler/KI67_TEST/: 2d_bleedover_test_v3.cppipe  2d_v4.cppipe  2d_v4_g10.cppipe  3d_bleedover_test.cppipe
core/: convert_pe_raw.py  copy_raw.py  image_query.py  merge_tiffs_align.py  parse_xml.py  run_omero_upload.sh  setup.py  tglow_io.py  train_basicpy.py
core/lib/: requirements_cellprofiler.txt
core/runners/: beads_to_psf.py  convert_pe_raw.py  parse_xml.py  run_basicpy.py  run_cellpose.py  run_redlionfish.py  run_registration.py  run_richardson_lucy.py  stage_cellprofiler.py  train_basicpy_2.py
core/tglow/io/: image_query.py  perkin_elmer_parser.py  tglow_io.py
core/tglow/utils/: tglow_plot.py  tglow_utils.py
lib/: requirements.txt
nextflow/: nextflow.config  run_instance.sh  tglow.nf
r-core/: tglow.r  tglow_constructors.r  tglow_filters.r  tglow_functions.r  tglow_image.r  tglow_io.r  tglow_plots.r
src/tglow/: __init__.py
src/tglow/io/: compound_image_provider.py  image_query.py  perkin_elmer_parser.py  processed_image_provider.py  tglow_io.py
src/tglow/utils/: tglow_plot.py  tglow_utils.py
templates/1_pre_process/scripts/: run_companion_ome.sh  run_copy_raw.sh  submit-train_basicpy.sh  train_basicpy.sh
templates/2_feature_extraction/scripts/: make_imageset.sh  run_pipeline.sh  submit-run.sh
templates/3_feature_analysis/scripts/: 0_setup.r  2_qc_data.r
tglow/io/: compound_image_provider.py  image_query.py  perkin_elmer_parser.py  processed_image_provider.py  tglow_io.py
tglow/utils/: tglow_plot.py  tglow_utils.py
